--- a/LavaMex/src/pages/inicio/inicio.scss
+++ b/LavaMex/src/pages/inicio/inicio.scss
@@ -1,7 +1,7 @@
 page-inicio {
 
 	#body{
-		background: url('../assets/imgs/bg1.jpeg');
+		background: #141f3d;
 		background-size: cover;
 		background-repeat: no-repeat;
 		color: #f0f0f0;
@@ -19,8 +19,8 @@ page-inicio {
 	}
 
 	#logo{
-		width: 56%;
-		height: 95%;
+		width: 60%;
+		height: 100%;
 	}
 
 	#en{
