--- a/LavaMex/src/pages/perfil/perfil.scss
+++ b/LavaMex/src/pages/perfil/perfil.scss
@@ -2,7 +2,7 @@ page-perfil {
 	
 	#per{
 		height:45%;
-		background: #37474f;
+		background: #263238;
 		color:#fff;
 	}
 
@@ -42,5 +42,10 @@ page-perfil {
 
 	#lab2{
 		color: #0f0f0f;
+	}
+
+	#nom{
+		align: center;
+		color: #fff;
 	}
 }
